# ref-2dgs

./: pyproject.toml  train-real.py  viewer_gui.py
